// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletCreateRestoreSuccess should match create wallet snapshot 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "paddingBottom": 64,
      "paddingTop": 48,
    }
  }
  style={
    Array [
      Array [
        Object {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        Object {
          "paddingTop": 100,
        },
      ],
      Object {
        "backgroundColor": "rgba(242, 242, 242, 1)",
      },
    ]
  }
  testID="wallet_create-restore_success"
>
  <View>
    <View
      style={
        Object {
          "paddingLeft": 40,
          "paddingRight": 40,
          "paddingTop": 40,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "SoraSemiBold",
                "fontSize": 20,
                "fontWeight": "600",
                "lineHeight": 28,
                "textAlign": "center",
              },
              Object {
                "color": "rgba(18, 18, 18, 1)",
              },
            ],
          ]
        }
      >
        Wallet created!
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "SoraRegular",
                "fontWeight": "400",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "color": "rgba(18, 18, 18, 1)",
              },
            ],
          ]
        }
      >
        Access decentralized finance with Bitcoin-grade security, strength and immutability.
      </Text>
    </View>
    <View
      style={
        Object {
          "marginTop": 112,
        }
      }
    >
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <Image
          resizeMode="cover"
          source={1}
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": undefined,
                "width": undefined,
              },
              Object {
                "marginTop": 12,
                "top": 144,
              },
            ]
          }
        />
        <Image
          source={1}
          style={
            Object {
              "height": 332,
              "width": 750,
            }
          }
        />
        <View
          style={
            Object {
              "paddingLeft": 48,
              "paddingRight": 48,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "rgba(18, 18, 18, 1)",
                "borderBottomLeftRadius": 24,
                "borderBottomRightRadius": 24,
                "borderTopLeftRadius": 24,
                "borderTopRightRadius": 24,
                "flexDirection": "row",
                "justifyContent": "center",
                "marginTop": 36,
                "opacity": 1,
                "paddingBottom": 14,
                "paddingLeft": 14,
                "paddingRight": 14,
                "paddingTop": 14,
              }
            }
            testID="continue_button"
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "rgba(242, 242, 242, 1)",
                    "fontFamily": "SoraSemiBold",
                    "fontWeight": "600",
                    "textAlign": "center",
                  },
                ]
              }
            >
              Continue
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`WalletCreateRestoreSuccess should match restore wallet snapshot 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "paddingBottom": 64,
      "paddingTop": 48,
    }
  }
  style={
    Array [
      Array [
        Object {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        Object {
          "paddingTop": 100,
        },
      ],
      Object {
        "backgroundColor": "rgba(242, 242, 242, 1)",
      },
    ]
  }
  testID="wallet_create-restore_success"
>
  <View>
    <View
      style={
        Object {
          "paddingLeft": 40,
          "paddingRight": 40,
          "paddingTop": 40,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "SoraSemiBold",
                "fontSize": 20,
                "fontWeight": "600",
                "lineHeight": 28,
                "textAlign": "center",
              },
              Object {
                "color": "rgba(18, 18, 18, 1)",
              },
            ],
          ]
        }
      >
        Wallet restored!
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "SoraRegular",
                "fontWeight": "400",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "color": "rgba(18, 18, 18, 1)",
              },
            ],
          ]
        }
      >
        Access decentralized finance with Bitcoin-grade security, strength and immutability.
      </Text>
    </View>
    <View
      style={
        Object {
          "marginTop": 112,
        }
      }
    >
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <Image
          resizeMode="cover"
          source={1}
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": undefined,
                "width": undefined,
              },
              Object {
                "marginTop": 12,
                "top": 144,
              },
            ]
          }
        />
        <Image
          source={1}
          style={
            Object {
              "height": 332,
              "width": 750,
            }
          }
        />
        <View
          style={
            Object {
              "paddingLeft": 48,
              "paddingRight": 48,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "rgba(18, 18, 18, 1)",
                "borderBottomLeftRadius": 24,
                "borderBottomRightRadius": 24,
                "borderTopLeftRadius": 24,
                "borderTopRightRadius": 24,
                "flexDirection": "row",
                "justifyContent": "center",
                "marginTop": 36,
                "opacity": 1,
                "paddingBottom": 14,
                "paddingLeft": 14,
                "paddingRight": 14,
                "paddingTop": 14,
              }
            }
            testID="continue_button"
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "RegularFont",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "rgba(242, 242, 242, 1)",
                    "fontFamily": "SoraSemiBold",
                    "fontWeight": "600",
                    "textAlign": "center",
                  },
                ]
              }
            >
              Continue
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
